welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
	setDirection.EST();
        ^ZigZag:18: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
	setDirection.OUEST();
        ^ZigZag:22: error: type mismatch;
 found   : Unit
 required: Boolean
		if (d())
                     ^ZigZag:26: error: not found: value y
				setPos(x,y+1)
                                         ^ZigZag:17: error: method d is defined twice
  conflicting symbols both originated in file 'plm.runtime136.ZigZag'
def d(){
    ^ZigZag:31: error: not found: value g
		if (g())
                    ^ZigZag:35: error: not found: value y
				setPos(x,y+2)
                                         ^